@@ -1,4 +1,4 @@
-.TH LH_BOOTSTRAP_CDEBOOTSTRAP 1 "13.08.2007" "1.0~a23" "live\-helper"
+.TH LH_BOOTSTRAP_CDEBOOTSTRAP 1 "20.08.2007" "1.0~a24" "live\-helper"
 
 .SH NAME
 lh_bootstrap_cdebootstrap \- erstellt ein Debian-System mit \fIcdebootstrap\fR(1)
