@@ -1,4 +1,4 @@
-.TH LH_BOOTSTRAP_CDEBOOTSTRAP 1 "2007\-08\-13" "1.0~a23" "live\-helper"
+.TH LH_BOOTSTRAP_CDEBOOTSTRAP 1 "2007\-08\-20" "1.0~a24" "live\-helper"
 
 .SH NAME
 lh_bootstrap_cdebootstrap \- bootstrap a Debian system with \fIcdebootstrap\fR(1)
