@@ -1,4 +1,4 @@
-.TH LH_CHROOT 1 "13.08.2007" "1.0~a23" "live\-helper"
+.TH LH_CHROOT 1 "20.08.2007" "1.0~a24" "live\-helper"
 
 .SH NAME
 lh_chroot \- Meta\-Helper f\[:u]r lh_chroot_*
