@@ -1,4 +1,4 @@
-.TH LH_SOURCE 1 "2007\-08\-13" "1.0~a23" "live\-helper"
+.TH LH_SOURCE 1 "2007\-08\-20" "1.0~a24" "live\-helper"
 
 .SH NAME
 lh_source \- meta\-helper for lh_source_*
