@@ -1,4 +1,4 @@
-.TH LIVE\-HELPER 7 "13.08.2007" "1.0~a23" "live\-helper"
+.TH LIVE\-HELPER 7 "20.08.2007" "1.0~a24" "live\-helper"
 
 .SH NAME
 live\-helper \- Debian Live Helper-Programme
