@@ -1,4 +1,4 @@
-.TH LIVE\-HELPER 7 "2007\-08\-13" "1.0~a23" "live\-helper"
+.TH LIVE\-HELPER 7 "2007\-08\-20" "1.0~a24" "live\-helper"
 
 .SH NAME
 live\-helper \- Debian Live helper programs
