@@ -1,3 +1,8 @@
+2007-08-28  Daniel Baumann  <daniel@debian.org>
+
+	* helpers/lh_clean:
+	  - Accepting more than one parameter at the same time.
+
 2007-08-14  Daniel Baumann  <daniel@debian.org>
 
 	* helpers/*:
